app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;


:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: "SF Pro Display", -apple-system-headline, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}


a {
  font-color: #00000;
  text-decoration: none;
}

a:hover {
  color: #FF4725;
  text-decoration: underline;
}

footer {
  border-top:1px solid #ccc;
  padding: 2em;
}

.highlight {
  color: #FF4725;
}

/* Fix button layout in menu on mobile */
@media screen and (max-width: 767px) {
  .mobile-button {
    display: block;
    width: 100%;
    margin-bottom: 1em; /* Adjust the value as needed */
  }
}

